# SpaceGlowTD

./: .gitignore  AI_SPEC.md  CMakeLists.txt  README.md  compile_flags.txt
shaders/: basic.frag  basic.vert
src/: Camera.cpp  Camera.h  Entities.h  GameConfig.h  GameState.h  Geometry.cpp  Geometry.h  Map.cpp  Map.h  Shader.cpp  Shader.h  UI.cpp  UI.h  main.cpp
